samples/_failures_safe/1761554472_9f45c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3377e27.c: In function ‘main’:
./samples/SAFE/__tmp_d3377e27.c:157:12: error: missing terminating " character
  157 |     printf("Analysis completed in %.6f
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d3377e27.c:157:5: error: expected expression at end of input
  157 |     printf("Analysis completed in %.6f
      |     ^~~~~~
./samples/SAFE/__tmp_d3377e27.c:157:5: error: expected declaration or statement at end of input
